--- a/style/style.css
+++ b/style/style.css
@@ -24,3 +24,47 @@ header {
    font-size: 26px;
 }
 
+section {
+    padding: 20px;
+    background-image: url("../images/people.jpg");
+    background-size: cover;
+    overflow: hidden;
+}
+
+.formContainer {
+    background-color: #ffffffbb;
+    max-width: 230px;
+    padding: 20px;
+    float: right;
+}
+
+h2 {
+    font-size: 16px;
+}
+
+.margin_bottom {
+    margin-bottom: 25px;
+}
+
+input, select {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    border: none;
+    margin-bottom: 10px;
+}
+
+input[type="submit"] {
+    color: white;
+    background-color: #48c5ce;
+    font-weight: bold;
+}
+
+select {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-image: url("../images/arrow.jpg");
+    background-repeat: no-repeat;
+    background-position: calc(100% - 10px) center;
+}
