--- a/style/style.css
+++ b/style/style.css
@@ -55,7 +55,7 @@ input, select {
 }
 
 input[type="submit"] {
-    color: white;
+    color: #ffffff;
     background-color: #48c5ce;
     font-weight: bold;
 }
@@ -67,4 +67,30 @@ select {
     background-image: url("../images/arrow.jpg");
     background-repeat: no-repeat;
     background-position: calc(100% - 10px) center;
+}
+
+footer {
+    background-color: #202121;
+    padding: 40px;
+    text-align: center;
+}
+
+.picture {
+    width: 160px;
+}
+
+.description {
+    color: #ffffff;
+    text-align: left;
+    display: inline-block;
+    max-width: 40%;
+    margin-left: 40px;
+}
+
+.description p, .description h3 {
+    margin-bottom: 20px;
+}
+
+.description h3 {
+    font-size: 24px;
 }
