--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,58 @@
+@media screen and (max-width: 415px) {
+
+    .title {
+        text-align: center !important;
+        font-size: 20px !important;
+    }
+
+    section {
+        padding: 0 !important;
+    }
+
+    .formContainer {
+        background-color: #ffffff69 !important;
+        max-width: 100% !important;
+        padding: 30px !important;
+        float: right;
+        box-sizing: border-box;
+    }
+    h2 {
+        font-size: 20px !important;
+    }
+
+    p {
+        text-align: justify;
+        font-size: 18px;
+    }
+    
+    .margin_bottom {
+        margin-bottom: 25px;
+    }
+    
+    input, select {
+        width: 100%;
+        box-sizing: border-box;
+        padding: 10px;
+        border: none;
+        margin-bottom: 10px;
+    }
+    
+    input[type="submit"] {
+        color: #ffffff;
+        background-color: #48c5ce;
+        font-weight: bold;
+    }
+    
+    select {
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        appearance: none;
+        background-image: url("../images/arrow.jpg");
+        background-repeat: no-repeat;
+        background-position: calc(100% - 10px) center;
+    }
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -94,3 +149,4 @@ footer {
 .description h3 {
     font-size: 24px;
 }
+
