--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 416px) {
 
     .title {
         text-align: center !important;
@@ -51,7 +51,36 @@
         background-repeat: no-repeat;
         background-position: calc(100% - 10px) center;
     }
+
+    footer {
+        background-color: #202121;
+        padding: 40px;
+        text-align: center;
+        border-radius: 0 0 5px 5px;
+    }
+    
+    .picture {
+        width: 160px;
+    }
+    
+    .description {
+        color: #ffffff;
+        text-align: left;
+        display: inline-block;
+        max-width: 40%;
+        margin-left: 40px;
+    }
+    
+    .description p, .description h3 {
+        margin-bottom: 20px;
+    }
+    
+    .description h3 {
+        font-size: 24px;
+    }
 }
+
+
 
 * {
     margin: 0;
@@ -60,10 +89,11 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #000000;
+    background-color: #3d3737b4;
 }
 
 .container {
+    
     margin: auto;
     max-width: 1000px;
 }
@@ -83,9 +113,15 @@ section {
     padding: 20px;
     background-image: url("../images/people.jpg");
     background-size: cover;
-    overflow: hidden;
+    background-repeat: no-repeat;
 }
 
+section::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+    
 .formContainer {
     background-color: #ffffffbb;
     max-width: 230px;
@@ -102,6 +138,8 @@ h2 {
 }
 
 input, select {
+    background-color: #ffffff;
+    border-radius: 5px;
     width: 100%;
     box-sizing: border-box;
     padding: 10px;
@@ -128,6 +166,7 @@ footer {
     background-color: #202121;
     padding: 40px;
     text-align: center;
+    border-radius: 0 0 5px 5px;
 }
 
 .picture {
