--- a/style/style.css
+++ b/style/style.css
@@ -1,87 +1,3 @@
-@media screen and (max-width: 416px) {
-
-    .title {
-        text-align: center !important;
-        font-size: 20px !important;
-    }
-
-    section {
-        padding: 0 !important;
-    }
-
-    .formContainer {
-        background-color: #ffffff69 !important;
-        max-width: 100% !important;
-        padding: 30px !important;
-        float: right;
-        box-sizing: border-box;
-    }
-    h2 {
-        font-size: 20px !important;
-    }
-
-    p {
-        text-align: justify;
-        font-size: 18px;
-    }
-    
-    .margin_bottom {
-        margin-bottom: 25px;
-    }
-    
-    input, select {
-        width: 100%;
-        box-sizing: border-box;
-        padding: 10px;
-        border: none;
-        margin-bottom: 10px;
-    }
-    
-    input[type="submit"] {
-        color: #ffffff;
-        background-color: #48c5ce;
-        font-weight: bold;
-    }
-    
-    select {
-        -moz-appearance: none;
-        -webkit-appearance: none;
-        appearance: none;
-        background-image: url("../images/arrow.jpg");
-        background-repeat: no-repeat;
-        background-position: calc(100% - 10px) center;
-    }
-
-    footer {
-        background-color: #202121;
-        padding: 40px;
-        text-align: center;
-        border-radius: 0 0 5px 5px;
-    }
-    
-    .picture {
-        width: 160px;
-    }
-    
-    .description {
-        color: #ffffff;
-        text-align: left;
-        display: inline-block;
-        max-width: 40%;
-        margin-left: 40px;
-    }
-    
-    .description p, .description h3 {
-        margin-bottom: 20px;
-    }
-    
-    .description h3 {
-        font-size: 24px;
-    }
-}
-
-
-
 * {
     margin: 0;
     padding: 0;
@@ -188,4 +104,89 @@ footer {
 .description h3 {
     font-size: 24px;
 }
+
+@media screen and (max-width: 416px) {
+
+    .title {
+        text-align: center;
+        font-size: 20px;
+    }
+
+    section {
+        padding: 0;
+    }
+
+    .formContainer {
+        background-color: #ffffff69;
+        max-width: 100%;
+        padding: 20px;
+        float: right;
+        box-sizing: border-box;
+    }
+    h2 {
+        font-size: 20px;
+    }
+
+    p {
+        text-align: justify;
+        font-size: 18px;
+    }
+    
+    .margin_bottom {
+        margin-bottom: 25px;
+    }
+    
+    input, select {
+        width: 100%;
+        box-sizing: border-box;
+        padding: 10px;
+        border: none;
+        margin-bottom: 10px;
+    }
+    
+    input[type="submit"] {
+        color: #ffffff;
+        background-color: #48c5ce;
+        font-weight: bold;
+    }
+    
+    select {
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        appearance: none;
+        background-image: url("../images/arrow.jpg");
+        background-repeat: no-repeat;
+        background-position: calc(100% - 10px) center;
+    }
+
+    footer {
+        background-color: #202121;
+        padding: 40px;
+        text-align: center;
+        border-radius: 0 0 5px 5px;
+        box-sizing: border-box;
+    }
+    
+    .picture {
+        width: 160px;
+    }
+    
+    .description {
+        color: #ffffff;
+        text-align: center;
+        display: inline-block;
+        max-width: 80%;
+        margin-right: 25px;
+    }
+    
+    .description p, .description h3 {
+        margin-bottom: 20px;
+    }
+    
+    .description h3 {
+        font-size: 24px;
+        margin-right: 15px;
+    }
+}
+
 
