--- a/style/style.css
+++ b/style/style.css
@@ -172,15 +172,20 @@ footer {
     }
     
     .description {
+        padding: 20px;
+        background-color: #6e737444;
         color: #ffffff;
         text-align: center;
         display: inline-block;
         max-width: 80%;
-        margin-right: 25px;
+        margin-right: 40px;
+        margin-top: 10px;
+        border-radius: 5px 5px 5px 5px;
     }
     
     .description p, .description h3 {
         margin-bottom: 20px;
+        text-align: justify;
     }
     
     .description h3 {
