--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #3d3737b4;
+    background-color: #000000;
 }
 
 .container {
@@ -105,7 +105,11 @@ footer {
     font-size: 24px;
 }
 
-@media screen and (max-width: 416px) {
+.description p {
+    text-align: justify;
+}
+
+@media screen and (max-width: 500px) {
 
     .title {
         text-align: center;
@@ -124,12 +128,13 @@ footer {
         box-sizing: border-box;
     }
     h2 {
-        font-size: 20px;
+        font-size: 17px;
+        text-align: left;
     }
 
     p {
         text-align: justify;
-        font-size: 18px;
+        font-size: 16px;
     }
     
     .margin_bottom {
@@ -161,7 +166,7 @@ footer {
 
     footer {
         background-color: #202121;
-        padding: 40px;
+        padding: 10px;
         text-align: center;
         border-radius: 0 0 5px 5px;
         box-sizing: border-box;
@@ -175,23 +180,67 @@ footer {
         padding: 20px;
         background-color: #6e737444;
         color: #ffffff;
-        text-align: center;
         display: inline-block;
-        max-width: 80%;
+        max-width: 300px;
         margin-right: 40px;
-        margin-top: 10px;
         border-radius: 5px 5px 5px 5px;
     }
     
     .description p, .description h3 {
         margin-bottom: 20px;
-        text-align: justify;
+        
     }
     
+    .description p {
+        text-align: justify;
+        font-size: 16px;
+    }
+
     .description h3 {
-        font-size: 24px;
-        margin-right: 15px;
+        font-size: 25px;
+        margin-left: 45px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
     }
 }
 
+@media screen and (max-width: 360px) {
+    footer {
+        background-color: #202121;
+        padding: 10px;
+        text-align: center;
+        border-radius: 0 0 5px 5px;
+        box-sizing: border-box;
+    }
+    
+    .picture {
+        width: 160px;
+    }
+    
+    .description {
+        padding: 20px;
+        background-color: #6e737444;
+        color: #ffffff;
+        display: inline-block;
+        max-width: 300px;
+        margin-right: 40px;
+        border-radius: 5px 5px 5px 5px;
+    }
+    
+    .description p, .description h3 {
+        margin-bottom: 20px;
+        
+    }
+    
+    .description p {
+        text-align: justify;
+        font-size: 16px;
+    }
 
+    .description h3 {
+        font-size: 25px;
+        margin-left: 30px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+    }
+}
