--- a/style/style.css
+++ b/style/style.css
@@ -110,6 +110,74 @@ footer {
 }
 
 @media screen and (max-width: 500px) {
+    .title {
+        text-align: center;
+        font-size: 20px;
+    }
+
+    section {
+        padding: 0;
+    }
+
+    .formContainer {
+        background-color: #ffffff69;
+        max-width: 100%;
+        padding: 20px;
+        float: right;
+        box-sizing: border-box;
+    }
+    h2 {
+        font-size: 17px;
+        text-align: left;
+    }
+
+    p {
+        text-align: justify;
+        font-size: 16px;
+    }
+    
+
+    footer {
+        background-color: #202121;
+        padding: 10px;
+        text-align: center;
+        border-radius: 0 0 5px 5px;
+        box-sizing: border-box;
+    }
+    
+    .picture {
+        width: 160px;
+    }
+    
+    .description {
+        padding: 20px;
+        background-color: #6e737444;
+        color: #ffffff;
+        display: inline-block;
+        max-width: 300px;
+        margin-right: 40px;
+        border-radius: 5px 5px 5px 5px;
+    }
+    
+    .description p, .description h3 {
+        margin-bottom: 20px;
+        
+    }
+    
+    .description p {
+        text-align: justify;
+        font-size: 16px;
+    }
+
+    .description h3 {
+        font-size: 25px;
+        margin-left: 70px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+    }
+}
+
+@media screen and (max-width: 416px) {
 
     .title {
         text-align: center;
@@ -137,32 +205,6 @@ footer {
         font-size: 16px;
     }
     
-    .margin_bottom {
-        margin-bottom: 25px;
-    }
-    
-    input, select {
-        width: 100%;
-        box-sizing: border-box;
-        padding: 10px;
-        border: none;
-        margin-bottom: 10px;
-    }
-    
-    input[type="submit"] {
-        color: #ffffff;
-        background-color: #48c5ce;
-        font-weight: bold;
-    }
-    
-    select {
-        -moz-appearance: none;
-        -webkit-appearance: none;
-        appearance: none;
-        background-image: url("../images/arrow.jpg");
-        background-repeat: no-repeat;
-        background-position: calc(100% - 10px) center;
-    }
 
     footer {
         background-color: #202121;
