--- a/style/style.css
+++ b/style/style.css
@@ -80,10 +80,12 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
     border: 2px solid #000000;
+    border-radius: 5px;
 }
 
 input[type="submit"]:active {
     background-color: red;
+    border-radius: 5px;
 }
 
 select {
