--- a/style/style.css
+++ b/style/style.css
@@ -69,6 +69,7 @@ input, select {
     padding: 10px;
     border: none;
     margin-bottom: 10px;
+    box-sizing: border-box;
 }
 
 input[type="submit"] {
@@ -76,16 +77,19 @@ input[type="submit"] {
     background-color: #48c5ce;
     font-weight: bold;
     cursor: pointer;
+    box-sizing: border-box;
 }
 
 input[type="submit"]:hover {
     border: 2px solid #000000;
     border-radius: 5px;
+    box-sizing: border-box;
 }
 
 input[type="submit"]:active {
     background-color: red;
     border-radius: 5px;
+    box-sizing: border-box;
 }
 
 select {
