--- a/style/style.css
+++ b/style/style.css
@@ -45,6 +45,7 @@ section::after {
     height: 480px;
     padding: 20px;
     float: right;
+    box-sizing: border-box;
 }
 
 h2 {
@@ -75,19 +76,18 @@ input, select {
 input[type="submit"] {
     border-radius: 5px;
     color: #ffffff;
-    background-color: #48c5ce;
+    background-color: #0d5e64;
     font-weight: bold;
     cursor: pointer;
     box-sizing: border-box;
 }
 
 input[type="submit"]:hover {
-    border: 2px solid #000000;
+    background-color: #0e4b50;
 }
 
 input[type="submit"]:active {
-    background-color: red;
-    border-radius: 5px;
+    background-color: #ff0000;
 }
 
 select {
