--- a/style/style.css
+++ b/style/style.css
@@ -172,7 +172,7 @@ footer {
         float: right;
         width: 50%;
         color: #ffffff;
-        background-color: #48c5ce;
+        background-color: #0d5e64;
         font-weight: bold;
         cursor: pointer;
     }
