--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #ffffff;
+    background-color: #000000;
 }
 
 .container {
